aligned buttons, fixed margins

--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ html, body {
     /* background:#a08fff ; */
     background-color: #8d73ff;
     background-image: url(clean-gray-paper.png);
-    min-width: 1100px;
+    min-width: 1300px;
 }
 
 h1 {
+    padding: 0;
     text-shadow: 0 1px 0 #ccc,
                  0 2px 0 #c9c9c9,
                  0 3px 0 #bbb,
@@ -19,12 +20,12 @@ h1 {
                  0 5px 10px rgba(0,0,0,.25),
                  0 10px 10px rgba(0,0,0,.2),
                  0 20px 20px rgba(0,0,0,.15);
-    color: #f4f2ff;
+    color: #f6f4ff;
   }
 
 .center {
     margin: 10% 15%;
-    padding: 5%;
+    padding: 3.4% 5%;
     background:#efedf7 ;
     border-radius: 1%;
     -webkit-box-sizing: content-box;
@@ -57,13 +58,12 @@ h1 {
 
 .title {
     font-size: 1.5em;
-    /* border: 3px solid red; */
 }
 
 .tab-container {
     display: flex;
-    /* border: 3px solid pink; */
     justify-content: space-around;
+    align-items: center;
 }
 
 
